# pc

./: .gitignore  Dockerfile  eslint.config.mts  package.json  pnpm-lock.yaml  prettier.config.mts
.extras/compose/pc/: compose.yml
.extras/compose/postgres/: compose.yml
.extras/doc/: projekthandbuch.adoc
.extras/doc/projekthandbuch/: ER-Diagramm_PC_Komponenten.plantuml  PcController.plantuml  PcMutationResolver.plantuml  PcQueryResolver.plantuml  PcService.plantuml  PcWriteController.plantuml  PcWriteService.plantuml  architektur.plantuml  projekthandbuch.adoc  sequenzdiagramm.plantuml  use-cases.plantuml
.github/workflows/: ci.yml  linter.yml
.github/workflows/linters/: prettier.config.js
prisma/: schema.prisma
src/: beispiel.mts  beispiele-write.mts  beispiele.mts  main.ts  module.ts
src/config/dev/: db-populate.ts
src/logger/: banner.ts
src/pc/: module.ts
src/pc/controller/: create-base-uri.ts  pc-controller.ts  pc-dto.ts  pc-write-controller.ts  spezifikation-dto.ts
src/pc/resolver/: pc-mutation.resolver.ts  pc-query.resolver.ts
src/pc/service/: exceptions.ts  pc-service.ts  pc-write-service.ts  suchparameter.ts  where-builder.ts
src/security/keycloak/: token-resolver.ts
test/integration/graphql/: mutation.test.mts  query.test.mts  token.mts
test/integration/rest/: DELETE.test.mts  GET-id.test.mts  GET-queryparam.test.mts  POST.test.mts  PUT.test.mts
test/lasttest/: locustfile.py  pyproject.toml
test/unit/: pc-service.find-by-id.test.mts  pc-service.find.test.mts  pc-write-service.test.mts
(+10 files in other folders)
